# Minimal-Insurance-Agent

./: CLAUDE.md  RAG_AUDIT_REPORT.md  README.md  SETUP.md  diagram.mmd  evaluation.py  main.py  mcp_server.py  pyproject.toml  pytest.ini
.beads/: issues.jsonl
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  detective.md  discovery.md  infra-supervisor.md  merge-supervisor.md  ml-supervisor.md  python-backend-supervisor.md  scout.md  scribe.md  worker-supervisor.md
.github/workflows/: agent-evaluation.yml  extended-evaluation.yml
data/: claim001.md  claim002.md  claim003.md  metadata_cache.json
tests/: README.md  __init__.py  analyze_results.py  conftest.py  test_adversarial.py  test_code_based.py  test_comprehensive_model.py  test_edge_cases.py  test_human_based.py  test_model_based.py  test_stress.py
