[project]
name = "insurance-claim-rag"
version = "0.1.0"
description = "Multi-agent RAG system for insurance claim analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "mcp_server.py", "evaluation.py"]

